syntax = "proto3";
package moviesc2s;

service MovieC2SService {
  rpc GetMovie (MovieSkey) returns (Movie);
  rpc GetMovies (Movie) returns (Movies);
}

message Movie {
  string skey = 1;  // Unique ID number for this movie.
  string filename = 2;
  string title = 3;
  string playtime = 4;
  string photodatetime = 5;
}

message Movies {
  repeated Movie movies = 1;
}

message MovieSkey {
  string skey = 1;  // Unique ID number for this movie.
}
